--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
     <head>
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
+<body>
     <main>
         <label for="cname"> Enter the name of a Country:</label>
         <input type="text" id="cname" name="cname"> <br><br>
         <button type="button" id="btn_submit"> Submit</button> 
 
         <section id="country-info">
-            <h3  >  
-                Country Information:
-               <h3 id="country-data"></h3> 
-            </h3>
+            <h3>Country Information:</h3>
+            <p id="country-data"></p>
         </section>
+
         <section id="bordering-countries">
             <h3  >  
                 Bordering Countries and their flags:
@@ -21,5 +21,7 @@
         </section>
       
     </main>
+    <script src="script.js"></script>
+</body>
    
 </html>
